translation-tool/inputs/source_meta/objects/Digital_Contract_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mapping__c</fullName>
        <label>Mapping</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Digital Contract Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCM{0000}</displayFormat>
        <label>Digital Contract Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Contract Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>